--- a/css.css
+++ b/css.css
@@ -495,6 +495,7 @@ clear:both;
 	margin:auto;
 	margin-top:50px;
 	background-color:#cecece;
-	padding: 20px;
+	padding: 10px;
+	width:50%;
 }
   /* Start http://www.cursors-4u.com */ * {cursor: url(http://cur.cursors-4u.net/holidays/hol-1/hol18.cur), auto !important;} /* End http://www.cursors-4u.com */
