--- a/css.css
+++ b/css.css
@@ -491,5 +491,11 @@ clear:both;
 	background: url(http://joepeacock.com/wp-content/uploads/2017/04/IMG_6009.gif) repeat, url(https://static.tumblr.com/91c86b76c086535806e5c9044f6d064e/rfnjdth/Fp5o3mxqv/tumblr_static_tumblr_static__640.gif) center center fixed no-repeat;
  background-size: 100px 100px, cover;
 }
-
+.comment{
+	margin:auto;
+	margin-top:50px;
+	background-color:#cecece;
+	padding: 10px;
+	width:50%;
+}
   /* Start http://www.cursors-4u.com */ * {cursor: url(http://cur.cursors-4u.net/holidays/hol-1/hol18.cur), auto !important;} /* End http://www.cursors-4u.com */
