--- a/cssO.css
+++ b/cssO.css
@@ -29,12 +29,14 @@ body{
 	text-align:center;
 }
 .header{
-	width: 53%;
+	width: 50%;
+	text-align:center;
 	margin:auto;
 }
 
 .headE{
 	width: 30%;
+	text-align:center;
 	margin:auto;
 	
 }
@@ -58,7 +60,7 @@ body{
 .enter{
 	overflow: hidden;
 	clear:both;
-	
+	text-align:center;
 	width: 33%;
 	margin:auto;
 
@@ -66,7 +68,7 @@ body{
 
 .counter{
 	clear:both;
-	
+	text-align:center;
 	width: 30%;
 	margin:auto;
 }
